--- a/style.css
+++ b/style.css
@@ -5,29 +5,35 @@
     font-family: Miller Text;
     src: url(https://file.garden/Z8fjEnTgmgo8vRee/fonts/Miller%20Text%20Regular.otf);
 }
+
 @font-face {
     font-family: Adobe Hebrew;
     src: url(https://file.garden/Z8fjEnTgmgo8vRee/fonts/Adobe%20Hebrew%20Regular.otf);
 }
+
 @font-face {
     font-family: Blur Light;
     src: url(https://file.garden/Z8fjEnTgmgo8vRee/fonts/Blur%20Light%20Regular.otf);
 }
+
 @font-face {
     font-family: Benjamin Franklin;
     src: url(https://file.garden/Z8fjEnTgmgo8vRee/fonts/BenjaminFranklin.ttf);
 }
+
 @font-face {
     font-family: Dominican Small Caps;
     src: url(https://file.garden/Z8fjEnTgmgo8vRee/fonts/Dominican%20Small%20Caps.TTF);
 }
+
 @font-face {
     font-family: Aged Machine;
     src: url(https://file.garden/Z8fjEnTgmgo8vRee/fonts/Aged%20Machine.ttf);
 }
+
 @font-face {
-	font-family: Alegreya;
-	src: url(https://file.garden/Z8fjEnTgmgo8vRee/fonts/Alegreya%20Variable.ttf);
+    font-family: Alegreya;
+    src: url(https://file.garden/Z8fjEnTgmgo8vRee/fonts/Alegreya%20Variable.ttf);
 }
 
 /* -------------- */
@@ -38,31 +44,27 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 h2 {
     font-family: Dominican Small Caps;
 }
+
 body {
     font-family: Adobe Hebrew;
     background-color: #E6E6F2;
     color: #2C2C2C;
 }
+
 body:not(.header) {
-	background-image: url('images/noisy-background.jpg');
-	background-repeat: repeat;
-	background-blend-mode: overlay;
+    background-image: url('images/noisy-background.jpg');
+    background-repeat: repeat;
+    background-blend-mode: overlay;
 }
+
 .container {
-	width: 90%;
-	max-width: 1200px;
-	margin: 0 auto;
-}
-.character {
-	display: inline-block;
-}
-@media (max-width: 768px) { 
-	.character {
-		display: none;
-	}
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 /* ------ */
@@ -75,11 +77,13 @@ header {
     box-shadow: 9px 9px 90px 9px inset black;
     text-shadow: 3px 1px purple;
 }
+
 header h1 {
     text-align: center;
     font-size: 3rem;
     font-family: Dominican Small Caps;
 }
+
 nav ul {
     display: flex;
     justify-content: center;
@@ -99,19 +103,30 @@ nav ul li a {
     transition: 0.4s;
     display: inline-block;
     padding: 8px;
-	border-radius: 50px;
+    border-radius: 50px;
 }
 
 nav ul li a:hover {
     background-color: rgba(186, 139, 240, 0.5);
     transform: scale(1.4);
-	box-shadow: -50px 0 50px -20px rgba(255, 0, 255, 0.3) inset, 0 0 20px 0 rgba(255, 255, 255, 0.2);;
+    box-shadow: -50px 0 50px -20px rgba(255, 0, 255, 0.3) inset, 0 0 20px 0 rgba(255, 255, 255, 0.2);
+    ;
 }
 
-@media (max-width: 768px) { 
-	nav ul li a {
-		font-size: 0.8rem;
-	}
+.character {
+    display: inline-block;
+}
+
+@media (max-width: 768px) {
+    .character {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    nav ul li a {
+        font-size: 0.8rem;
+    }
 }
 
 /* --------- */
@@ -120,9 +135,11 @@ nav ul li a:hover {
 ::-webkit-scrollbar {
     width: 9px;
 }
+
 ::-webkit-scrollbar-track {
     background-color: rgba(25, 0, 25, 0.5);
 }
+
 ::-webkit-scrollbar-thumb {
     background-color: rgba(66, 245, 102, 0.5);
     border-radius: 10px;
@@ -135,15 +152,19 @@ nav ul li a:hover {
 main {
     padding: 40px 0;
 }
+
 h2 {
     color: #5C2D91;
     font-size: 2rem;
     margin-bottom: 20px;
+    text-shadow: 1px 1px 1px black;
 }
+
 p {
     font-size: 1rem;
     line-height: 1.6;
 }
+
 button {
     background-color: #00D1A0;
     color: white;
@@ -153,102 +174,82 @@ button {
     cursor: pointer;
     margin-top: 10px;
 }
+
 button:hover {
     background-color: #00B38C;
 }
 
+/* --------- */
 /* Campanhas */
+/* --------- */
 .campaigns {
     padding: 20px 0;
-    border-radius: 10px;
 }
 
 .campaign {
-    background-color: #709c8f;
+    background-color: rgba(112, 156, 143, 1);
     color: white;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
     border: 5px double black;
 }
+
 .campaign:last-child {
-	margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .campaign h3 {
     font-family: Blur Light;
     font-size: 1.5rem;
     margin-bottom: 10px;
-    text-shadow: 5px 2px 3px black;
+    text-shadow: 4px 2px 3px black;
 }
 
 .campaign p {
     margin-bottom: 10px;
 }
 
-.campaign button {
+.campaign .info {
     background-color: #9B4D96;
     font-family: Aged Machine;
     border-radius: 10px;
-    border: 3px solid #693773;
-    transition: 0.5s;
+    border: 3px solid rgba(105, 55, 115, 1);
+    transition: 0.6s;
+    font-size: 1rem;
+    margin-top: 10px;
+    padding: 8px 16px;
+    cursor: pointer;
 }
 
-.campaign button:hover {
-    border-color: #00735a;
+.campaign .info:hover {
+    border-color: rgba(0, 115, 90);
+    background-color: rgba(0, 179, 140, 1);
 }
 
-/* Campaign Section - Hidden Content */
 .campaign .additional-content {
     overflow: hidden;
-    /* Hide overflow content initially */
     max-height: 0;
-    /* Start with max-height of 0 */
     opacity: 0;
-    /* Start fully transparent */
     padding: 0px 5px 5px 5px;
-    /* Start with no padding */
     background-color: #3d854f;
     box-shadow: inset 2px 6px 6px 1px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     margin-top: 10px;
     transition: max-height 0.5s ease-out, opacity 0.5s ease-out, padding-top 0.5s ease-out;
-    /* Smooth transition */
 }
 
-/* Transition effect when expanding */
 .campaign.active .additional-content {
     max-height: 300px;
-    /* Set a fixed height for the scrollable area */
     opacity: 1;
-    /* Fade in effect */
     padding-top: 10px;
-    /* Add padding when expanded */
     overflow-y: auto;
-    /* Enable vertical scrolling */
     word-break: break-word;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
 }
 
-/* Optional: Button styles */
-.learn-more-btn {
-    background-color: #00D1A0;
-    color: white;
-    padding: 8px 16px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 1rem;
-    margin-top: 10px;
-}
-
-.learn-more-btn:hover {
-    background-color: #00B38C;
-}
-
+/* -------- */
 /* Contatos */
+/* -------- */
 #contact {
     background-color: #5C2D91;
     color: #E6E6F2;
@@ -275,27 +276,33 @@ button:hover {
     padding-left: 40px;
 }
 
+/* ----- */
 /* Forms */
+/* ----- */
 .form {
-	background-color: white;
+    background-color: white;
     color: black;
     padding: 20px;
     margin: 20px 0;
     border-radius: 10px;
     border: 5px double black;
 }
+
 .form .inner {
-	width: 95%;
-	height: 700px;
-	border: 1px dashed black;
-	margin: 0 auto;
-}
-iframe {
-	width: 100%;
-	height: 100%;
+    width: 95%;
+    height: 700px;
+    border: 1px dashed black;
+    margin: 0 auto;
 }
 
+iframe {
+    width: 100%;
+    height: 100%;
+}
+
+/* ------ */
 /* Footer */
+/* ------ */
 footer {
     background-color: #2A1A70;
     color: #E6E6F2;
